<resources>
    <string name="app_name">LeafChat</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="log_in">Log In</string>
    <string name="this_is_receive_message">This is receive message</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="jay">Jay</string>
    <string name="type_a_message">Type a message</string>
    <string name="send_btn">send_btn</string>
    <string name="back_btn">back_btn</string>
    <string name="decryption_error">Decryption Error</string>
    <string-array name="spinner_items">
        <item>Employee</item>
        <item>Manager</item>
        <item>Admin</item>
    </string-array>
</resources>
