<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo2"
        tools:ignore="ImageContrastCheck"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/app_logo"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:background="@drawable/edt_background"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingHorizontal="13dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_background"
        android:hint="@string/password"
        android:paddingHorizontal="13dp"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_background"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:text="@string/sign_up"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/btn_background"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
